[workspace]
members = [
  "smart_servo_core",
  "smart_servo_vendors/fashionstar",
  "smart_servo_abi",
  "smart_servo_cli",
  "smart_servo_wasm",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["tianrking"]
license = "MIT"
description = "MotorBridge Smart Servo: serial bus smart servo core, vendor protocols, ABI, CLI, and Python bindings"

[workspace.dependencies]
thiserror = "1"
serialport = "4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
