[package]
name = "smart_servo_abi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
smart_servo_core = { path = "../smart_servo_core" }
smart_servo_vendor_fashionstar = { path = "../smart_servo_vendors/fashionstar" }

